<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">vParking</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_home">Tìm bãi đỗ xe</string>
    <string name="title_activity_tao_bai_do">Tạo bãi đỗ</string>
    <string name="title_activity_check_in">Check in QR</string>
    <string name="title_activity_favorite">Bãi đỗ yêu thích</string>

    <string name="spalsh_text">Tìm bãi đỗ xe gần bạn nhất</string>
    <string name="signin_mobile">ĐĂNG NHẬP BẰNG SỐ ĐIỆN THOẠI</string>
    <string name="signup">ĐĂNG KÝ</string>
    <string name="singin_facebook">ĐĂNG NHẬP BẰNG FACEBOOK</string>
    <string name="user_demo">User name</string>

    <string name="doing" tools:ignore="TypographyEllipsis">Đang thực hiện...</string>
    <string name="adding" tools:ignore="TypographyEllipsis">Đang tạo bãi đỗ...</string>

    <!-- Parking -->
    <string name="parking_checkin">Check in</string>
    <string name="parking_home">Trang chủ</string>
    <string name="parking_quanlybaido">Quản lý bãi đỗ</string>
    <string name="parking_favorite">Bãi đỗ yêu thích</string>
    <string name="parking_dangxuat">Đăng xuất</string>
    <string name="parking_timkiemnangcao">Tìm kiếm nâng cao</string>
    <string name="isMaster">Kích hoạt chủ bãi đỗ</string>
    <string name="isUser">Tôi là người gửi xe</string>
    <string name="find_parking_user">Tìm chỗ để xe</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="hotenl">Họ</string>
    <string name="hotenf">Tên</string>
    <string name="birth_day_info">Ngày sinh</string>
    <string name="address_info">Địa chỉ</string>
    <string name="hoantat">Hoàn tất</string>
    <string name="parking_get_data" tools:ignore="TypographyEllipsis">Đang tải dữ liệu...</string>
    <string name="loi_coloi">Có lỗi xảy ra</string>

    <!-- Profile -->
    <string name="email">E-mail</string>
    <string name="gender">Giới tính</string>
    <string name="full_name">Họ tên</string>
    <string name="update_btn">Cập nhật</string>
    <string name="update_message">Đang cập nhật thông tin...</string>
    <string name="update_message_picture">Đang cập nhật ảnh đại diện...</string>
    <string name="update_message_success">Cập nhật thông tin thành công</string>
    <string name="update_message_failed_gender">Vui lòng chọn giới tính</string>
    <string name="update_message_failed_name">Vui lòng diền Họ và Tên</string>
    <string name="update_message_failed_birthday">Vui lòng chọn ngày sinh</string>
    <string name="update_message_failed_address">Vui lòng diền địa chỉ</string>
    <string name="update_message_failed_email">Vui lòng diền địa chỉ mail</string>
    <string name="update_message_failed_phone">Vui lòng xác thực số điện thoại</string>

    <!-- Setting -->
    <string name="tatca">Tất cả</string>
    <string name="oto">Ô tô</string>
    <string name="xemay">Xe máy</string>

    <!-- Add Parking -->
    <string name="add_vitri">Vị trí</string>
    <string name="add_parking_name">Tên bãi đỗ</string>
    <string name="add_parking_des">Giới thiệu bãi đỗ</string>
    <string name="add_diachi">Địa chỉ</string>
    <string name="add_chotrong">Chỗ trống tối đa</string>
    <string name="add_mucgia">Mức giá theo giờ</string>
    <string name="add_thoigianmo">Thời gian mở cửa</string>
    <string name="add_thoigiandong">Thời gian đóng cửa</string>
    <string name="add_dangtin">Đăng tin</string>
    <string name="add_them">Thêm bãi đỗ</string>
    <string name="all_vehicle">Số xe muốn gửi</string>
    <string name="price">Mức giá</string>
    <string name="subcribe_noti">Nhận thông báo</string>
    <string name="find">Tìm kiếm</string>
    <string name="loi_chonanh">Vui lòng chọn ảnh đại diện</string>
    <string name="loi_vitri">Vui lòng chọn vị trí</string>
    <string name="loi_nhapten">Vui lòng nhập tên bãi đỗ xe</string>
    <string name="loi_chotrong">Số lượng chứa xe không hợp lệ</string>
    <string name="loi_chontien">Số tiền không hợp lệ</string>
    <string name="loi_chongio_mocua">Vui lòng chọn thời gian mở cửa</string>
    <string name="loi_chongio_dongcua">Vui lòng chọn thời gian đóng của</string>
    <string name="loi_loaibaido">Vui lòng chọn loại bãi đỗ</string>
    <string name="loi_addparking">Đăng tin thất bại</string>
    <string name="success_addparking">Đăng tin thành công</string>
    <string name="text_back_press_to_exit">Nhấn Back 2 lần để thoát</string>
    <string name="user_info">Thông tin chi tiết</string>

    <string-array name="add_spinner">
        <item>Loại bãi đỗ</item>
        <item>Xe đạp</item>
        <item>Ô tô</item>
        <item>Xe máy</item>
        <item>Xe đạp - xe máy</item>
        <item>Xe máy – Ô tô</item>
        <item>Tất cả</item>
    </string-array>

    <!-- Find Advanced -->
    <string name="find_price">Mức giá</string>

    <!-- Chi tiết -->
    <string name="rate">Rate</string>
    <string name="dan_duong">Dẫn đường</string>
    <string name="vi_tri_trong">Vị trí trống</string>
    <string name="thoi_gian_gio">Thời gian giờ</string>
    <string name="so_dat_cho">Số đặt chỗ</string>

    <string name="title_activity_user_sign_up">ĐĂNG KÝ TÀI KHOẢN</string>
    <string name="continues">Tiếp tục</string>
    <string name="des_signup"> Mã xác nhận sẽ được gửi qua di động của quý khách</string>
    <string name="otp">Nhập OTP</string>
    <string name="des_signup1">Vui lòng nhập mã xác nhận đã được gửi tới tin nhắn của quý khách</string>
    <string name="send_otp">Gửi mã xác nhận</string>
    <string name="phone">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="password_re">Nhập lại mật khẩu</string>
    <string name="title_activity_otp_verifycation">OtpVerifycationActivity</string>
    <string name="title_activity_find_parking">Tìm bãi đỗ xe</string>
    <string name="title_activity_chi_tiet">Chi tiết</string>
    <string name="unlimited">Unlimited</string>
    <string name="limited">Limited</string>
    <string name="controng">Còn trống</string>
    <string name="hetcho">Hết chỗ</string>

    <string name="error">Có lỗi xảy ra</string>
    <string name="error_server_request">Không thể kết nối tới Server</string>
    <string name="error_session_invalid">Bạn đã hết phiên làm việc</string>
    <string name="error_no_permission">Bạn không có quyền hạn này</string>
    <string name="error_no_parking">Bãi đỗ không tồn tại</string>
    <string name="error_get_parking">Không thể tải dữ liệu của bãi đỗ</string>
    <string name="error_system">Lỗi hệ thống</string>
    <string name="error_find_advanced">Không thể tìm bãi đỗ</string>

    <!-- Check in -->
    <string name="gift_code">Gift Code </string>
    <string name="check_in">CHECK IN</string>
    <string name="input_gift_code">Nhập Gift Code</string>
    <string name="checking" tools:ignore="TypographyEllipsis">Đang check...</string>
    <string name="put_qr_code_into_the_frame">Đưa QR Code vào đúng khung hình</string>

    <!-- Facebook API ID -->
    <string name="facebook_app_id">1623661414599437</string>
    <string name="ak_login_protocol_scheme">ak1623661414599437</string>
    <string name="account_kit_client_token">48e3188e71531cff2966c8fdf0f5ed91</string>
</resources>
