<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".view.activity.AddParkingActivity"
    tools:ignore="MissingPrefix">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <ImageView
            android:id="@+id/img_tao_bai_do_picture"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_parking_background" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager_tao_bai_do"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txt_tao_bai_do_image_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end|right"
            android:layout_marginEnd="@dimen/size_16"
            android:layout_marginRight="@dimen/size_16"
            android:layout_marginTop="@dimen/size_8"
            android:text="0/0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end|right"
            android:background="@android:color/transparent"
            android:contentDescription="@null"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="TakePicture"
            android:paddingBottom="@dimen/size_4"
            android:paddingEnd="@dimen/size_12"
            android:paddingLeft="0dp"
            android:paddingRight="@dimen/size_12"
            android:paddingStart="0dp"
            android:src="@mipmap/ic_picture" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingBottom="@dimen/size_24"
        android:paddingLeft="@dimen/size_24"
        android:paddingRight="@dimen/size_24">

        <!--<TextView-->
        <!--style="@style/AddParking_Textview"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/add_vitri"-->
        <!--android:textColor="@android:color/white" />-->

        <EditText
            android:id="@+id/edt_tao_bai_do_name"
            style="@style/AddParking_Editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_parking_name"
            app:theme="@style/AddParking_Editext.ButtumLine" />

        <EditText
            android:id="@+id/edt_tao_bai_do_diacho"
            style="@style/AddParking_Editext_No_Focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_24dp"
            android:drawablePadding="@dimen/size_16"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_white_24dp"
            android:hint="@string/add_diachi"
            app:theme="@style/AddParking_Editext.ButtumLine" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_36"
            android:layout_marginTop="@dimen/size_16"
            android:background="@drawable/custom_radio_group"
            android:orientation="horizontal"
            android:padding="@dimen/size_2">

            <RadioButton
                android:id="@+id/chk_tao_bai_do_tatca"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_radio_button_left"
                android:button="@android:color/transparent"
                android:checked="true"
                android:gravity="center"
                android:text="@string/tatca"
                android:textColor="@drawable/custom_radio_button_text" />

            <RadioButton
                android:id="@+id/chk_tao_bai_do_oto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_radio_button"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/oto"
                android:textColor="@drawable/custom_radio_button_text" />

            <RadioButton
                android:id="@+id/chk_tao_bai_do_xemay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_radio_button_right"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/xemay"
                android:textColor="@drawable/custom_radio_button_text" />
        </RadioGroup>

        <TextView
            style="@style/AddParking_Textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_chotrong"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_36"
            android:layout_marginTop="@dimen/size_16"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_tao_bai_do_empty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/size_16"
                android:layout_marginRight="@dimen/size_16"
                android:layout_weight="1"
                android:background="@drawable/custom_textview_add_parking"
                android:gravity="center_vertical"
                android:hint="0"
                android:inputType="number"
                android:maxLength="7"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="-2dp"
                android:layout_marginRight="-2dp"
                android:background="@drawable/custom_imagebutton_left"
                android:contentDescription="@null"
                android:onClick="addPlace"
                android:paddingLeft="@dimen/size_2"
                android:paddingRight="@dimen/size_2"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_add_white_48dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_imagebutton_right"
                android:contentDescription="@null"
                android:onClick="removePlace"
                android:paddingLeft="@dimen/size_2"
                android:paddingRight="@dimen/size_2"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_remove_white_48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/AddParking_Textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="@dimen/size_16"
                android:paddingLeft="0dp"
                android:paddingRight="@dimen/size_16"
                android:paddingStart="0dp"
                android:text="@string/add_mucgia"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/txt_tao_bai_do_money"
                style="@style/AddParking_Textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0k"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seek_bar_tao_bai_do_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:max="30"
            android:progressDrawable="@drawable/custom_seekbar"
            android:thumb="@drawable/seekbar_thunb" />

        <EditText
            android:id="@+id/edt_tao_bai_do_begin_time"
            style="@style/AddParking_Editext_No_Focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_thoigianmo"
            app:theme="@style/AddParking_Editext.ButtumLine" />

        <EditText
            android:id="@+id/edt_tao_bai_do_end_time"
            style="@style/AddParking_Editext_No_Focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_thoigiandong"
            app:theme="@style/AddParking_Editext.ButtumLine" />

        <EditText
            android:id="@+id/edt_tao_bai_do_desc"
            style="@style/AddParking_Editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:hint="@string/add_parking_des"
            android:inputType="text"
            android:maxLines="2"
            android:paddingBottom="@dimen/size_16"
            android:paddingEnd="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingStart="0dp"
            android:paddingTop="@dimen/size_8"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:theme="@style/AddParking_Editext.ButtumLine" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        android:background="@color/btn_fb_plus"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="addParking"
        android:text="@string/add_dangtin"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</LinearLayout>