<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".view.activity.FindAdvancedActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_find"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/size_24">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_38"
            android:background="@drawable/custom_radio_group"
            android:orientation="horizontal"
            android:padding="@dimen/size_2">

            <RadioButton
                android:id="@+id/chk_find_advanced_tatca"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_radio_button_left"
                android:button="@android:color/transparent"
                android:checked="true"
                android:gravity="center"
                android:text="@string/tatca"
                android:textColor="@drawable/custom_radio_button_text" />

            <RadioButton
                android:id="@+id/chk_find_advanced_oto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_radio_button"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/oto"
                android:textColor="@drawable/custom_radio_button_text" />

            <RadioButton
                android:id="@+id/chk_find_advanced_xemay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_radio_button_right"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/xemay"
                android:textColor="@drawable/custom_radio_button_text" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_vehicle"
            style="@style/AddParking_Textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_vehicle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_38"
            android:layout_marginTop="@dimen/size_16"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_find_advanced_empty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/size_16"
                android:layout_weight="1"
                android:background="@drawable/custom_textview_add_parking"
                android:gravity="center_vertical"
                android:hint="0"
                android:inputType="number"
                android:maxLength="7"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="-2dp"
                android:layout_marginRight="-2dp"
                android:background="@drawable/custom_imagebutton_left"
                android:contentDescription="@null"
                android:onClick="addPlaceSearch"
                android:paddingLeft="@dimen/size_2"
                android:paddingRight="@dimen/size_2"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_add_white_48dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_imagebutton_right"
                android:contentDescription="@null"
                android:onClick="removePlaceSearch"
                android:paddingLeft="@dimen/size_2"
                android:paddingRight="@dimen/size_2"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_remove_white_48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/AddParking_Textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/size_16"
                android:text="@string/find_price"
                android:textColor="@android:color/white"
                android:id="@+id/textView" />

            <TextView
                android:id="@+id/txt_find_advanced_money"
                style="@style/AddParking_Textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0k"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <!--<SeekBar-->
        <!--android:id="@+id/seek_bar_tao_bai_do_money"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/size_16"-->
        <!--android:backgroundTint="@android:color/white"-->
        <!--android:max="1000" />-->

        <SeekBar
            android:id="@+id/seek_bar_find_advanced_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:max="30"
            android:progress="0"
            android:progressDrawable="@drawable/custom_seekbar"
            android:thumb="@drawable/seekbar_thunb" />

        <CheckBox
            android:id="@+id/chek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:buttonTint="@android:color/white"
            android:text="@string/subcribe_noti"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_find"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        android:background="@drawable/btn_purple_no_radius"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="TimKiem"
        android:padding="@dimen/size_10"
        android:text="@string/find"
        android:textColor="@android:color/white" />
</LinearLayout>